--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Sync html to s3
         run: |
           aws s3 sync ./site s3://${{ secrets.BUCKET_NAME }}/site --delete --quiet
-          aws cloudfront create-invalidation --region ap-northeast-1 --distribution-id E1M7JV5LIUMCJX --paths "/*"
+          aws cloudfront create-invalidation --region ap-northeast-1 --distribution-id E847A0DXURQPK --paths "/*"
