--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,4 @@ nav:
   - Home: index.md
   - 自己紹介: Introduce_Myself/index.md
   - オリエンテーション: Orientation/index.md
+  - Web Application Builder: Web_Application_Builder/index.md
