--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,3 +34,5 @@ nav:
       - kintone/plugin/index.md
       - プラグインの管理: kintone/plugin/manage_plugin.md
       - サンプルプラグインの追加: kintone/plugin/sample/add_sample_plugin.md
+      - サンプルプラグイン: kintone/plugin/sample/sample_plugin.md
+  - 課題一覧: home_works.md
